[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprites/Misc/Note.png" type="Texture" id=1]
[ext_resource path="res://Assets/Codes/Notes.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="Notes" type="Area2D" groups=["Note"]]
modulate = Color( 1, 1, 1, 0 )
collision_layer = 128
collision_mask = 256
script = ExtResource( 2 )

[node name="Note" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
frame = 1

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Notes_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Notes_area_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
